src/test/ui/specialization/issue-38091.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0277]: the trait bound `(): Valid` is not satisfied
  --> $DIR/issue-38091.rs:18:55
   |
LL | impl<'a, T> Check for T where <T as Iterate<'a>>::Ty: Valid {}
   |                                                       ^^^^^ the trait `Valid` is not implemented for `()`
   |
note: required because of the requirements on the impl of `Check` for `T`
  --> $DIR/issue-38091.rs:18:13
   |
LL | impl<'a, T> Check for T where <T as Iterate<'a>>::Ty: Valid {}
   |             ^^^^^     ^
note: required because of the requirements on the impl of `Iterate<'a>` for `T`
  --> $DIR/issue-38091.rs:8:13
   |
LL | impl<'a, T> Iterate<'a> for T
   |             ^^^^^^^^^^^     ^
note: required by a bound in `Iterate`
  --> $DIR/issue-38091.rs:4:1
   |
LL | trait Iterate<'a> {
   | ^^^^^^^^^^^^^^^^^ required by this bound in `Iterate`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
